New files added - [] Files modified - [Login.css] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/Login/Login.css
+++ b/src/main/webapp/pages/Login/Login.css
@@ -1,3 +1,7 @@
-.logobg{
-        background-color:cornsilk !important;
+/*.logobg{*/
+/*        background-color:cornsilk !important;*/
+/*}*/
+.wm-app .bg-primary {
+    color: #fff;
+    background-color: #f0f0f0;
 }
