New files added - [] Files modified - [Login.css,Login.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/Login/Login.css
+++ b/src/main/webapp/pages/Login/Login.css
@@ -1,7 +1,11 @@
 /*.logobg{*/
 /*        background-color:cornsilk !important;*/
 /*}*/
-.wm-app .bg-primary {
+/*.wm-app .bg-primary {*/
+/*    color: #fff;*/
+/*    background-color: #f0f0f0;*/
+/*}*/
+.cl {
     color: #fff;
     background-color: #f0f0f0;
 }
