Form Status SortOrder-(FormId and SortOrder combination is made unique) Files modified - [Main.html,cx2_published_dataModel.json,app.css,FormStatusesController.java,FormStatusesService.java,FormStatuses.java,FormStatusesServiceImpl.java,db-connection-settings.json]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -7,3 +7,7 @@
     height: 60px;
     vertical-align: baseline !important;
 }
+.wm-app .form-control,
+.wm-app .form-group + .form-control {
+    height: 38px;
+}
