--- a/src/main/webapp/pages/UserCreation/UserCreation.css
+++ b/src/main/webapp/pages/UserCreation/UserCreation.css
@@ -1,3 +1,3 @@
 .app-wizard .btn-success, .app-wizard .btn-success:hover, .app-wizard .btn-success:focus, .app-wizard .btn-success:active, .app-wizard .btn-success:active:hover, .wm-app .btn-success[disabled]:hover {
-    background-color: #ef6262;
+    background-color: #ef6262; border-color: #ef6262;
 }
