Emma's pagination margin removal Files modified - [app.css,EditForm.html,EditForm.variables.json]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -11,9 +11,9 @@
 .wm-app .form-group + .form-control {
     height: 38px;
 }
-input.form-control {
+.form-group input.form-control {
     margin-bottom: 9px;
 }
-textarea.form-control {
+.form-group textarea.form-control {
     margin-bottom: 9px;
 }
