--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -17,3 +17,11 @@
 .form-group textarea.form-control {
     margin-bottom: 9px;
 }
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+    display: none !important;
+}
