- Addressed Bug #1005 - GISMap should be disabled on load - Fixed logic for shwoing GIS section Files modified - [EditForm.js,app.css,EditForm.html,Forms.variables.json,Forms.js]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -25,13 +25,15 @@
 .x-ng-cloak {
     display: none !important;
 }
-label.app-radioset-label.disabled > input + .caption:before {
+label.app-radioset-label.disabled > input + .caption:before,
+div.app-checkbox label.disabled.unchecked input[type=checkbox] + .caption:before {
     -moz-box-shadow: inset 0 0 0 3px #aaa;
     -webkit-box-shadow: inset 0 0 0 3px #aaa;
     box-shadow: inset 0 0 0 3px #aaa;
     background-color: #aaa;
 }
-label.app-radioset-label.disabled > input:checked + .caption:before {
+label.app-radioset-label.disabled > input:checked + .caption:before,
+div.app-checkbox label.disabled input[type=checkbox] + .caption:before {
     border: 2px #555 solid;
     background-color: #555;
 }
