--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -37,3 +37,7 @@ div.app-checkbox label.disabled input[type=checkbox] + .caption:before {
     border: 2px #555 solid;
     background-color: #555;
 }
+.wm-app .app-grid .table thead th .header-data {
+    text-transform: none !important;
+    font-weight: bold;
+}
