--- a/src/main/webapp/pages/NewForm/NewForm.css
+++ b/src/main/webapp/pages/NewForm/NewForm.css
@@ -4,3 +4,6 @@
     width: auto !important;
     height: auto !important;
 }
+.app-wizard .btn-success, .app-wizard .btn-success:hover, .app-wizard .btn-success:focus, .app-wizard .btn-success:active, .app-wizard .btn-success:active:hover, .wm-app .btn-success[disabled]:hover {
+    background-color: #ef6262; border-color: #ef6262;
+}
