- Fixed bug where user could sign up with no Municipality - Fixed bug where Municipality logos did not show up - Fixed CSS issues with some buttons on user creation - Fixed issue where search did not clear after adding a Municipality Files modified - [UserCreation.js,UserCreation.html,general-options.json,project-security.xml,UserCreation.variables.json,intercept-urls.json,UserCreation.css]

--- a/src/main/webapp/pages/UserCreation/UserCreation.css
+++ b/src/main/webapp/pages/UserCreation/UserCreation.css
@@ -1,3 +1,7 @@
 .app-wizard .btn-success, .app-wizard .btn-success:hover, .app-wizard .btn-success:focus, .app-wizard .btn-success:active, .app-wizard .btn-success:active:hover, .wm-app .btn-success[disabled]:hover {
     background-color: #ef6262; border-color: #ef6262;
 }
+
+.app-search.dropdown-menu img {
+    width: 32px;
+}
