- Fixed various stuff with vendors/owners/etc on new forms Files modified - [pages-config.json,FormController.java,NewForm.js,QueryExecutionController.java,cx2-queries.hbm.xml,Forms.html,DBUtils.jar,Cx2QueryExecutorServiceImpl.java,NewForm.variables.json,FormService.java,servicedef.xml,Forms.variables.json,Forms.css,cx2_query.json,Cx2QueryExecutorService.java,NewForm.html]

--- a/src/main/webapp/pages/Forms/Forms.css
+++ b/src/main/webapp/pages/Forms/Forms.css
@@ -4,3 +4,7 @@
     width: auto !important;
     height: auto !important;
 }
+
+div[name=panelForm] > div.panel-content {
+    min-height: 800px;
+}
