Add Location dialogs- results popping under on mobile Files modified - [MyProjects.html,MyProjects.variables.json,MyProjects.js,Forms.css,NewForm.css,ViewProject.css]

--- a/src/main/webapp/pages/Forms/Forms.css
+++ b/src/main/webapp/pages/Forms/Forms.css
@@ -8,3 +8,8 @@
 div[name=panelForm] > div.panel-content {
     min-height: 800px;
 }
+
+
+ul.app-search.dropdown-menu {
+    z-index: 99999999 !important;
+}
