--- a/src/main/webapp/pages/ViewProject/ViewProject.css
+++ b/src/main/webapp/pages/ViewProject/ViewProject.css
@@ -4,3 +4,8 @@
     width: auto !important;
     height: auto !important;
 }
+
+
+ul.app-search.dropdown-menu {
+    z-index: 99999999 !important;
+}
