Messaging for forms Files modified - [ViewProject.css,pages-config.json,cx2_published_dataModel.json,ViewProject.html,Forms.css,ViewProject.variables.json,Forms.html,Projects.java,db-connection-settings.json]

--- a/src/main/webapp/pages/ViewProject/ViewProject.css
+++ b/src/main/webapp/pages/ViewProject/ViewProject.css
@@ -35,6 +35,10 @@ ul.app-search.dropdown-menu {
     float: right;
 }
 
+.mine .popover a {
+    color: white;
+}
+
 .media-right {
     float: left;
 }
