Better company selection New files added - [selectCompany.variables.json,selectCompany.html,selectCompany.js,selectCompany.css] Files modified - [CompanyMunicipalities.js,CompanyForms.html,ManageGISData.variables.json,MunicipalityAdministration.variables.json,app.variables.json,CompanyProfile.html,ProcessForms.variables.json,MyCompany.html,MyMunicipality.variables.json,ProcessForms.html,app.js,CompanyForms.js,CompanyUsers.js,pages-config.json,CompanyProfile.js,CompanyMunicipalities.variables.json,ManageUsers.html,app.css,UserStatistics.html,CompanyForms.variables.json,CXGlobalSettings.html,CompanyProfile.variables.json,CompanyMunicipalities.html,MyCompany.variables.json,CompanyUsers.html,CompanyUsers.variables.json,ManageRoles.html]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -41,3 +41,12 @@ div.app-checkbox label.disabled input[type=checkbox] + .caption:before {
     text-transform: none !important;
     font-weight: bold;
 }
+.panel-transparent {
+    background: none !important;
+    border: none !important;
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    -ms-box-shadow: none !important;
+    -o-box-shadow: none !important;
+}
