- Fixed cut-off checkboxes Files modified - [app.css,NewForm.html]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -55,3 +55,7 @@ div.app-checkbox label.disabled input[type=checkbox] + .caption:before {
 .wm-app .nav-pills > li.active > a:focus {
     color: #ef6262 !important;
 }
+.wm-app .radio .caption,
+.wm-app .checkbox .caption {
+    min-height: 1.4em !important;
+}
