Form Fees - Add to Cart Files modified - [MyCart.js,MyCart.html,Forms.variables.json,MyCart.variables.json,Forms.css,Forms.html,Forms.js]

--- a/src/main/webapp/pages/Forms/Forms.css
+++ b/src/main/webapp/pages/Forms/Forms.css
@@ -59,3 +59,14 @@ ul.app-search.dropdown-menu {
 .wm-app .userpic {
     border: 3px rgba(0,0,0,0.1) solid;
 }
+
+
+/***************For Fees*************/
+.pendingFee-class{font-weight:bold;
+}
+/*.cartFee-class{color:blue;*/
+/*}*/
+.paidFee-class{color:fuchsia;
+}
+
+
