Add Form Fee To Cart New files added - [InsertIntoCartRequest.java] Files modified - [cx2-queries.hbm.xml,QueryExecutionController.java,UpdatePrimaryVendorInMasterFormsRequest.java,UpdateWorkMunicipalityRequest.java,MyCart.html,Cx2QueryExecutorService_V1.java,Forms.html,UpdateCfinProfileRequest.java,Forms.js,Cx2QueryExecutorServiceImpl.java,ProjectSoftDeleteRequest.java,Forms.variables.json,AddUsersToVendorRequest.java,MyCart.variables.json,Forms.css,InsertCategoryMappingRequest.java,cx2_query.json,Cx2QueryExecutorService.java,Cx2QueryExecutorServiceImpl_V1.java,UpdatePasswordAndCfRequest.java]

--- a/src/main/webapp/pages/Forms/Forms.css
+++ b/src/main/webapp/pages/Forms/Forms.css
@@ -62,11 +62,9 @@ ul.app-search.dropdown-menu {
 
 
 /***************For Fees*************/
-.pendingFee-class{font-weight:bold;
+.UnpaidFee-class{font-weight:bold;
 }
 /*.cartFee-class{color:blue;*/
 /*}*/
 .paidFee-class{color:fuchsia;
 }
-
-
