--- a/src/main/webapp/pages/MyProfile/MyProfile.css
+++ b/src/main/webapp/pages/MyProfile/MyProfile.css
@@ -1,4 +1,4 @@
-.profile-photo {
+[name=panelProfileInfo] .profile-photo {
     max-width: 300px;
     max-height: 300px;
     width: auto !important;
