Style Changes for Top badge Files modified - [topnav.css]

--- a/src/main/webapp/pages/topnav/topnav.css
+++ b/src/main/webapp/pages/topnav/topnav.css
@@ -13,3 +13,13 @@
         display:none !important;
     }
 }
+
+.wm-app .btn .badge, .wm-app a .badge {
+    right: -1em;
+    top: -1em;
+    z-index: 3;
+    margin-top: 5pt;
+    background-color: black;
+    border-radius: 100px;
+    font-weight: bold;
+}
