Cart Badge css was applying for all badges in app Files modified - [topnav.css,topnav.html]

--- a/src/main/webapp/pages/topnav/topnav.css
+++ b/src/main/webapp/pages/topnav/topnav.css
@@ -14,7 +14,7 @@
     }
 }
 
-.wm-app .btn .badge, .wm-app a .badge {
+.wm-app a.cartBadge .badge{
     right: -1em;
     top: -1em;
     z-index: 3;
