Projects-Forms Files modified - [FormsTypesForDashboardResponse.java,FindForm.js,FindForm.html,cx2-queries.hbm.xml,QueryExecutionController.java,ViewProject.html,Cx2QueryExecutorService_V1.java,ViewProject.variables.json,ViewProject.css,Cx2QueryExecutorServiceImpl.java,CheckingUserWithInVendorUsersResponse.java,MunicipalityCountResponse.java,ViewProject.js,GetRolesForUserResponse.java,FindForm.variables.json,VendorsCountForMunicipalitiesResponse.java,cx2_query.json,UserSubscriptionsCountResponse.java,GetGis2formsByFormResponse.java,Cx2QueryExecutorService.java,app.js,Cx2QueryExecutorServiceImpl_V1.java] Removed files - [SearchFormByVendorResponse.java]

--- a/src/main/webapp/pages/ViewProject/ViewProject.css
+++ b/src/main/webapp/pages/ViewProject/ViewProject.css
@@ -5,6 +5,9 @@
     height: auto !important;
 }
 
+body >.app-search.dropdown-menu {
+    z-index: 99999999 !important;
+}
 
 ul.app-search.dropdown-menu {
     z-index: 99999999 !important;
