Projects-Forms Bugs Files modified - [style.less,QueryExecutionController.java,cx2-queries.hbm.xml,variables.less,app.css,ViewProject.html,style.css,.wmproject.properties,ViewProject.variables.json,ViewProject.css,Cx2QueryExecutorServiceImpl.java,cx2_query.json,Cx2QueryExecutorService.java,index.html]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -79,3 +79,6 @@ div.app-checkbox label.disabled input[type=checkbox]:checked + .caption:before {
 .wm-app .checkbox .caption {
     min-height: 1.4em !important;
 }
+.modal-open #wm-app-content {
+    overflow: hidden;
+}
