--- a/src/main/webapp/pages/ViewProject/ViewProject.css
+++ b/src/main/webapp/pages/ViewProject/ViewProject.css
@@ -5,13 +5,6 @@
     height: auto !important;
 }
 
-body >.app-search.dropdown-menu {
-    z-index: 99999999 !important;
-}
-
-ul.app-search.dropdown-menu {
-    z-index: 99999999 !important;
-}
 
 .milestone-class{font-weight:bold;
 }
@@ -42,7 +35,7 @@ ul.app-search.dropdown-menu {
     color: white;
 }
 
-.media-right {
+.chat .media-right {
     float: left;
 }
 
