--- a/src/main/webapp/themes/vermillion/variables.less
+++ b/src/main/webapp/themes/vermillion/variables.less
@@ -219,7 +219,7 @@
 @input-color-placeholder:        #999;
 
 //** Default `.form-control` height
-@input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
+@input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 4);
 //** Large `.form-control` height
 @input-height-large:             (ceil(@font-size-large * @line-height-large) + (@padding-large-vertical * 2) + 2);
 //** Small `.form-control` height
@@ -383,7 +383,7 @@
 @navbar-default-border:            transparent;
 
 // Navbar links
-@navbar-default-link-color:                @text-color;
+@navbar-default-link-color:                @brand-danger;
 @navbar-default-link-hover-color:          #fff;
 @navbar-default-link-hover-bg:             rgba(0, 0, 0, 0.05);
 @navbar-default-link-active-color:         #fff;
