updated "Paid" fee color to match the application...even though it's red. Tweaked explanatory text on EditForm settings. updated display format of paid fee date Files modified - [EditForm.html,Forms.css,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.css
+++ b/src/main/webapp/pages/Forms/Forms.css
@@ -66,5 +66,5 @@ ul.app-search.dropdown-menu {
 }
 /*.cartFee-class{color:blue;*/
 /*}*/
-.paidFee-class{color:fuchsia;
+.paidFee-class{color: #e34343;
 }
