- Removing duplicated horseshit Files modified - [NewForm.variables.json,NewForm.js,app.css,NewForm.html,cx2-queries.hbm.xml,pom.xml,cx2_query.json]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -82,3 +82,10 @@ div.app-checkbox label.disabled input[type=checkbox]:checked + .caption:before {
 .modal-open #wm-app-content {
     overflow: hidden;
 }
+@media (min-width: 768px) {
+    .modal-larger {
+        width: 70% !important;
+        height: 80% !important;
+        margin: 30px auto !important;
+    }
+}
