Multi column layout support for dynamic form fields Files modified - [NewForm.js,app.css,app.js]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -89,3 +89,6 @@ div.app-checkbox label.disabled input[type=checkbox]:checked + .caption:before {
         margin: 30px auto !important;
     }
 }
+.dynamic-field-column {
+    padding-right: 14px !important;
+}
