- Improved interface for adding Calculated fields Files modified - [EditForm.js,EditForm.css,EditForm.html,pom.xml]

--- a/src/main/webapp/pages/EditForm/EditForm.css
+++ b/src/main/webapp/pages/EditForm/EditForm.css
@@ -4,3 +4,14 @@
         margin: 30px auto;
     }
 }
+
+.calc-grid .app-grid-column {
+    padding: 2px !important;
+}
+
+[name=layoutgridFieldButtons] button span {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: block;
+}
