--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -89,6 +89,6 @@ div.app-checkbox label.disabled input[type=checkbox]:checked + .caption:before {
         margin: 30px auto !important;
     }
 }
-.dynamic-field-column {
-    padding-right: 14px !important;
+.dynamic-field-column:not(.col-sm-12) {
+    padding-right: 10em !important;
 }
