Mystery update Files modified - [leftnav.html,app.css,EditForm.variables.json,app.js]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -92,3 +92,7 @@ div.app-checkbox label.disabled input[type=checkbox]:checked + .caption:before {
 .dynamic-field-column:not(.col-sm-12) {
     padding-right: 10em !important;
 }
+.stuckTop {
+    position: fixed !important;
+    top: 0 !important;
+}
