- Cart will now show Inspection fees - ViewInspection shows more detail Files modified - [cx2-queries.hbm.xml,app.css,MyCart.html,FeesInCartByUserResponse.java,Forms.css,pom.xml,cx2_query.json,ViewInspection.variables.json,ViewInspection.js,InspectionService.java,ViewInspection.html,Forms.js]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -95,3 +95,9 @@ div.app-checkbox label.disabled input[type=checkbox]:checked + .caption:before {
 .stuckTop {
     position: fixed !important;
 }
+.muni-logo {
+    max-width: 240px;
+    max-height: 240px;
+    width: auto !important;
+    height: auto !important;
+}
