GIS Maintenance- "Subdivision" field is broken Files modified - [cx2_published_dataModel.json,ManageGISData.variables.json,EditGISRecord.variables.json,ManageGISData.html,ManageGISData.css,EditGISRecord.html,Gisrecords.java]

--- a/src/main/webapp/pages/ManageGISData/ManageGISData.css
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.css
@@ -1,5 +1,12 @@
 .search-icon {
     font-size: 20pt;
     margin-top: 37pt;
-    margin-left: -30pt;
+    margin-left: -50pt;
+}
+
+
+.wm-app .modal-dialog {
+   
+    width: 55% !important;
+    
 }
