--- a/src/main/webapp/pages/_viewInspection/_viewInspection.css
+++ b/src/main/webapp/pages/_viewInspection/_viewInspection.css
@@ -43,3 +43,9 @@
 .wm-app .userpic {
     border: 3px rgba(0,0,0,0.1) solid;
 }
+.picture-thumb {
+    max-width: 100px;
+    max-height: 100px;
+    width: auto !important;
+    height: auto !important;
+}
