ManageGISData- added street number to main datagrid and subdivision details for "Addresses" _viewInspection- updated panels buttons etc to "success" class (blue-green) from "primary" class (red) to differentiate Forms from Inspections Files modified - [ManageGISData,_viewInspection]

--- a/src/main/webapp/pages/_viewInspection/_viewInspection.css
+++ b/src/main/webapp/pages/_viewInspection/_viewInspection.css
@@ -15,7 +15,7 @@
    height:calc(100% - 40pt);
 }
 .mine .popover {
-    background-color: #e34343;
+    background-color: #7accbe;
     color: white;
     float: right;
 }
