address view changes Files modified - [_viewForm,pom.xml]

--- a/src/main/webapp/pages/_viewForm/_viewForm.css
+++ b/src/main/webapp/pages/_viewForm/_viewForm.css
@@ -61,3 +61,10 @@ ul.app-search.dropdown-menu {
 /*}*/
 .paidFee-class{color: #e34343;
 }
+
+/*******Address Styles*****/
+.app-livelist.address .app-livelist-container .app-list-item {
+        border: none; 
+        text-align:center;
+        padding:0px;
+}
