--- a/src/main/webapp/pages/_viewForm/_viewForm.css
+++ b/src/main/webapp/pages/_viewForm/_viewForm.css
@@ -59,7 +59,7 @@ ul.app-search.dropdown-menu {
 }
 /*.cartFee-class{color:blue;*/
 /*}*/
-.paidFee-class{color: #e34343;
+.paidFee-class{color: black;
 }
 
 /*******Address Styles*****/
