--- a/src/main/webapp/pages/_viewForm/_viewForm.css
+++ b/src/main/webapp/pages/_viewForm/_viewForm.css
@@ -59,8 +59,8 @@ ul.app-search.dropdown-menu {
 }
 /*.cartFee-class{color:blue;*/
 /*}*/
-.paidFee-class{color: black;
-}
+/* .paidFee-class{color: black; */
+/* } */
 
 /*******Address Styles*****/
 .app-livelist.address .app-livelist-container .app-list-item {
