--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -108,3 +108,7 @@ div.app-checkbox label.disabled input[type=checkbox]:checked + .caption:before {
     width: auto !important;
     height: auto !important;
 }
+.tilehover {
+    cursor: pointer;
+    cursor: hand;
+}
