Changes required for Form "Incomplete" boolean Files modified - [CompanyForms,FindForm,GISDetails,MunicipalityForms,ProcessForms,UserClosedForms,UserOpenForms,cx2,app.css]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -112,3 +112,6 @@ div.app-checkbox label.disabled input[type=checkbox]:checked + .caption:before {
     cursor: pointer;
     cursor: hand;
 }
+.incomplete {
+    color: red;
+}
