Completing -Form Review- set "Incomplete" Files modified - [_viewForm,FormService]

--- a/src/main/webapp/pages/_viewForm/_viewForm.css
+++ b/src/main/webapp/pages/_viewForm/_viewForm.css
@@ -68,3 +68,11 @@ ul.app-search.dropdown-menu {
         text-align:center;
         padding:0px;
 }
+
+.isIncomplete{
+    text-align: right;
+    
+}
+.isNotIncomplete{
+    text-align: center;
+}
